# Rayblock

./: CMakeLists.txt  README.md  build.bat  run.bat
include/: application.h  application.hpp  camera.hpp  shader.h  shader.hpp
shaders/: saved.frag  shader.frag  shader.vert
src/: application.c  application.cpp  camera.cpp  main.c  main.cpp  shader.c  shader.cpp
